objects/ProductGroup__c.object
<CustomObject>
    <description>Product Groups, previously known as product family in legacy Markit. 
A collection of high level product groups.</description>
    <fields>
        <fullName>PKIDProdGrp__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>PdG{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID ProdGrp</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProductGroupNumber__c</fullName>
        <description>SFDC1-6246 Product Group Number. Populated via SAP integration.</description>
        <externalId>true</externalId>
        <label>Product Group Number</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SFDC1-5469 To set if the active/inactive status of Product Group record</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisibleInLiveChat__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-5540 Check if the Product Group is visible in LiveChat.</description>
        <label>Visible in LiveChat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisibleinWeb2Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6246 Check if the Product Group is visible in Web2Case form.</description>
        <label>Visible in Web2Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisibleinWebPortal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6246 Check if the Product Group is visible in Web Portal.</description>
        <label>Visible in Web Portal</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Groups</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>